<resources>
    <string name="app_name">Scalora</string>
    <string name="app_description1">This app can you calculate your body mass index (BMI). Your BMI can help you determine if you are at a healthy weight, or if you need to make changes to your diet or exercise habits.</string>
    <string name="onboard_text1">Let\'s help you get better!!</string>
    <string name="onboard_text2">Get Started</string>
    <string name="onboard_screen_image_1">Onboard Screen Image 1</string>
    <string name="signup_text1">Welcome Onboard !!</string>
    <string name="signup_text2">Let\'s help you meet your goal</string>
    <string name="signup_text3">Enter your name</string>
    <string name="signup_text4">Enter your email address</string>
    <string name="signup_text5">Enter your password</string>
    <string name="signup_text7">Confirm your password</string>
    <string name="signup_text9">Sign up</string>
    <string name="signup_text10">Already have an account?</string>
    <string name="signup_text11">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>