<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200"
    tools:context=".ScaloraOnBoardScreen">

    <ImageView
        android:id="@+id/onboardImage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/onboard_screen_image_1"
        android:src="@drawable/image1_scalora"
        app:layout_constraintBottom_toTopOf="@id/onboardText1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/onboardText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:fontFamily="@font/poppins"
        android:text="@string/onboard_text1"
        android:textColor="@color/purple_custom_950"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/onboardText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboardImage1" />

    <TextView
        android:id="@+id/onboardText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:fontFamily="@font/poppins"
        android:padding="18dp"
        android:text="@string/app_description1"
        android:textAlignment="center"
        android:textColor="@color/purple_custom_950"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/onboardButton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboardText1"
        app:layout_constraintWidth_percent="0.80" />


    <androidx.cardview.widget.CardView
        android:id="@+id/onboardButton1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="28dp"
        android:clickable="true"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboardText2"
        app:layout_constraintWidth_percent="0.75">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/button_custom_floating1"
            android:fontFamily="@font/poppins"
            android:paddingVertical="12dp"
            android:text="@string/onboard_text2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>